--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,8 @@ a {
 	text-decoration: none;
 }
 
-.main-points-of-menu a:hover {
-	color: #81b3d2 ;
-}
-
-.main-points-of-menu a:active {
-	color: #b2b2b2;
+img {
+	max-width: 100%;
 }
 
 .main-header {
@@ -30,28 +26,47 @@ a {
 	color: #000;
 }
 
-.main-header li {
-	list-style-type: none;
+.main-header ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
+
+.main-points-of-menu a:hover {
+	color: #81b3d2;
+}
+
+.main-points-of-menu a:active {
+	color: rgba(0, 0, 0, 0.3);
+}
+
+.menu-chosen a {
+	color: #766357;
+} 
 
 .main-container-img {
 	width: 1200px;
-	height: 800px;
-	background-size: 1200px 800px;
+	height: 564px;
+	background-size: 1200px 57px, cover;
 	background-color: #81b3d2;
-	background-image: url("../img/background.jpg");
-	background-repeat: no-repeat;
-	background-position: top center;
+	background-image: url("../img/shape-for-background.png"), url("../img/background.jpg");
+	background-repeat: no-repeat, no-repeat;
+	background-position: bottom center, top center;
 }
 
-.main-container p {
+.general {
 	font-weight: 400;
-	line-height: 21px;
+	font-size: 14px;
+	line-height: 26px;
 }
 
 .request {
+	width: 1200px;
+	height: 274px;
 	background-color: #99b9d0;
-	background-image: url("../img/background.jpg");
+	background-size: cover; 
+	background-image: url("../img/hotels-background.jpg");
+	background-position: top center;
 	color: #fff;
 }
 
@@ -68,8 +83,6 @@ a {
 }
 
 .request input[type="submit"] {
-	width: 133px;
-	height: 32px;
 	background-color: transparent;
 	border: #fff solid 2px;
 	color: #fff;
@@ -79,7 +92,7 @@ a {
 	line-height: 21px;
 }
 
-.title {
+.features .title {
 	font-size: 21px;
 	line-height: 26px;
 }
@@ -90,19 +103,25 @@ a {
 	line-height: 21px;
 }
 
-.features-list li {
-	list-style-type: none;
+.features-list {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
-.features-list > li:nth-of-type(1),
-.features-list > li:nth-of-type(2) {
+.features-list p,
+.features-list span {
+	font-size: 14px;
+	line-height: 21px;
+	font-weight: 400;
+}
+
+.blue-feature {
 	background-color: #81b3d2;
 	color: #fff;
 }
 
-.features-list > li:nth-of-type(3),
-.features-list > li:nth-of-type(4),
-.features-list > li:nth-of-type(5) {
+.white-feature {
 	background-color: #eee;
 	color: #333;
 }
@@ -128,9 +147,13 @@ a {
 	background-color: #fff;
 }
 
+.interested-detailed p {
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 400;
+}
+
 .detailed {
-	width: 110px;
-	height: 27px;
 	background-color: #81b3d2;
 	font-size: 14px;
 	line-height: 21px;
@@ -143,12 +166,10 @@ a {
 
 .detailed:active {
 	background-color: #5496bd;
-	color: #88b6d1;
+	color: rgba(255, 255, 255, 0.3);
 }
 
 .book {
-	width: 142px;
-  height: 27px;
   background-color: #766357;
   font-size: 14px;
 	line-height: 21px;
@@ -161,7 +182,7 @@ a {
 
 .book:active {
 	background-color: #503e33;
-	color: #857871;
+	color: rgba(255, 255, 255, 0.3);
 }
 
 .response-header b {
@@ -176,19 +197,20 @@ a {
 	font-weight: 400;
 }
 
-.response-header a {
+.sort:not(.chosen) {
 	color: rgba(0, 0, 0, 0.3);
+	border-bottom:  #81b3d2 dotted 1px;
 }
 
-.response-header .chosen {
+.sort.chosen {
 	color: #81b3d2;
 }
 
-.response-header a:hover {
+.sort:hover {
 	color: #81b3d2;
 }
 
-.response-header a:active {
+.sort:active {
 	color: #000;
 }
 
@@ -209,28 +231,34 @@ a {
 	color: #b2b2b2;
 }
 
-.response-main p,
+.response-main .type,
 .response-main span {
 	font-size: 14px;
 	line-height: 21px;
 	font-weight: 400;
+	color: #333;
 }
 
-.response-main .rating-stars {
+.rating-stars {
+	list-style: none;
+} 
+
+.rating-stars li {
 	background-image: url("../img/star.svg");
-	background-repeat: repeat-x;
 }
 
 .response-main .rating {
+	font-size: 14px;
+	line-height: 21px;
+	font-weight: 400;
 	background-color: #f2f2f2;
+	color: #666;
 }
 
 .button {
 	display: inline-block;
 	text-align: center;
 	vertical-align: middle;
-	width: 568px;
-	height: 86px;
 	background-color: #766357;
 	color: #fff;
 	font-size: 21px;
@@ -247,8 +275,6 @@ a {
 }
 
 .search-button {
-	width: 458px;
-	height: 58px;
 	background-color: #81b3d2;
 	border: none;
 	color: #fff;
@@ -263,6 +289,7 @@ a {
 
 .search-button:active {
 	background-color: #5496bd;
+	color: rgba(255, 255, 255, 0.3);
 }
 
 footer {
@@ -279,16 +306,78 @@ footer ul {
 	line-height: 26px;
 }
 
-input[type="text"] {
+.footer-social {
+	padding: 0;
+	margin: 0;
+}
+
+.footer-social li {
+	background-color: #81b3d2;
+}
+
+.footer-social a {
+	background-repeat: no-repeat;
+	background-size: 17px 15px;
+}
+
+.footer-social .twitter {
+	background-image: url("../img/twitter.svg");
+}
+
+.footer-social .facebook {
+	background-image: url("../img/facebook.svg");
+}
+
+.footer-social .youtube {
+	background-image: url("../img/youtube.svg");
+}
+
+.footer-social a:active {
+	opacity: 0.3;
+}
+
+.footer-social li:hover {
+	background-color: #669ec0;
+}
+
+.footer-social li:active {
+	background-color: #5496bd;
+}
+
+.modal input[type="text"] {
 	background-color: #f2f2f2;
 	border: none;
 }
 
-input[type="text"]:hover {
+.modal input[type="text"]:hover {
 	background-color: #ebebeb;
 }
 
-input[type="text"]:focus {
+.modal input[type="text"]:focus {
 	background-color: #fff;
 	border: #e5e5e5 solid 2px;
+}
+
+.calendar {
+	fill: #cacaca;
+}
+
+.calendar:hover {
+	fill: #000;
+}
+
+.calendar:active {
+	fill: #81b3d2;
+}
+
+.academy-logo {
+	fill: #000;
+}
+
+.academy-logo:hover {
+	fill: #81b3d2;
+}
+
+.academy-logo:active {
+	fill: #bdbbbc;
 }
