--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ img {
 	color: rgba(0, 0, 0, 0.3);
 }
 
-.menu-chosen a {
+.menu-chosen {
 	color: #766357;
 } 
 
@@ -153,6 +153,18 @@ img {
 	font-weight: 400;
 }
 
+.response-header b {
+	font-size: 21px;
+	line-height: 26px;
+}
+
+.response-header a,
+.response-header p {
+	font-size: 12px;
+	line-height: 18px;
+	font-weight: 400;
+}
+
 .detailed {
 	background-color: #81b3d2;
 	font-size: 14px;
@@ -185,25 +197,14 @@ img {
 	color: rgba(255, 255, 255, 0.3);
 }
 
-.response-header b {
-	font-size: 21px;
-	line-height: 26px;
-}
-
-.response-header a,
-.response-header p {
-	font-size: 12px;
-	line-height: 18px;
-	font-weight: 400;
-}
-
-.sort:not(.chosen) {
+.sort {
 	color: rgba(0, 0, 0, 0.3);
 	border-bottom:  #81b3d2 dotted 1px;
 }
 
 .sort.chosen {
 	color: #81b3d2;
+	border-bottom: none;
 }
 
 .sort:hover {
@@ -296,10 +297,6 @@ footer {
 	background-color: rgba(254, 254, 254, 0.9);
 }
 
-footer ul {
-	list-style-type: none;
-}
-
 .hashtag {
 	font-size: 21px;
 	font-weight: 700;
@@ -309,6 +306,7 @@ footer ul {
 .footer-social {
 	padding: 0;
 	margin: 0;
+	list-style-type: none;
 }
 
 .footer-social li {
@@ -344,6 +342,18 @@ footer ul {
 	background-color: #5496bd;
 }
 
+.academy-logo {
+	fill: #000;
+}
+
+.academy-logo:hover {
+	fill: #81b3d2;
+}
+
+.academy-logo:active {
+	fill: #bdbbbc;
+}
+
 .modal input[type="text"] {
 	background-color: #f2f2f2;
 	border: none;
@@ -368,16 +378,4 @@ footer ul {
 
 .calendar:active {
 	fill: #81b3d2;
-}
-
-.academy-logo {
-	fill: #000;
-}
-
-.academy-logo:hover {
-	fill: #81b3d2;
-}
-
-.academy-logo:active {
-	fill: #bdbbbc;
 }
